Resize footer and add its background image

--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ header {
   margin: auto;
 }
 
+iframe {
+  width: 80%;
+}
+
 nav > ul {
   list-style-type: none;
   margin: 0;
@@ -45,6 +49,10 @@ a:visited {
   color: red;
 }
 
+.style {
+  font-style: italic;
+}
+
 footer {
   text-align: center;
   color: #4795e9;
@@ -53,20 +61,14 @@ footer {
   /*background-image: url('ball.jpg')*/
 }
 
-footer img {
-
-}
-
-
 aside {
-  /*background-image: url('favicon.ico');*/
-  /*background-repeat: repeat-x;*/
+  width: 75%;
+  margin: auto;
+  background-image: url('favicon.ico');
+  background-repeat: repeat-x;
+  background-position: bottom;
 }
 
-/*    h1 {
-  font-size: 2em;
-}
+/*@media only screen and (max-width:) {
 
-h2 {
-  font-size: 1.5em;
 }*/
