Change section with id 'main' to semantic main tag

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header {
   color: #f7ffbe;
 }
 
-#main {
+main {
   box-sizing: border-box;
   width: 75%;
   padding: 2%;
@@ -69,6 +69,6 @@ aside {
   background-position: bottom;
 }
 
-/*@media only screen and (max-width:) {
+@media only screen and (min-width: 960px) {
 
-}*/
+}
